--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin":{
+    "pdfreadermode": "bin/pdfreadermode"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/michal-h21/pdfreadermode.git"
