--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   },
   "homepage": "https://github.com/michal-h21/pdfreadermode#readme",
   "dependencies": {
+    "child_process": "^1.0.2",
     "find-config": "^1.0.0",
     "fs": "0.0.1-security",
     "jsdom": "^16.2.1",
     "minimist": "^1.2.5",
+    "mustache": "^4.0.1",
     "node-fetch": "^2.6.0",
     "path": "^0.12.7",
     "readability": "git+https://github.com/mozilla/readability.git"
